task 1 done, fixing errors