@@ -12,13 +12,13 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class FileService {
-    private static final Gson GSON = new GsonBuilder().create();
+    private static final Gson GSON = new GsonBuilder().setPrettyPrinting().create();
     private static final Path PATH = Paths.get("data/books.json");
     private static final Path pathEMPLOYERS = Paths.get("data/employers.json");
-    private static final Path pathRegisteredUsers = Paths.get("data/registeredUsers.json");
 
     public static List<Book> readFile() {
         String json = "";
@@ -30,45 +30,38 @@ public class FileService {
         return GSON.fromJson(json, CollectionBook.class).getBooksList();
     }
 
-    public static List<Employer> readFileEmployers() {
-        String json = "";
+    public static void writeFile(List<Employer> users) {
+        List<Employer> existingUsers = readExistingUsers();
+        existingUsers.addAll(users);
+        String json = GSON.toJson(existingUsers);
         try {
-            json = Files.readString(pathEMPLOYERS);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return GSON.fromJson(json, CollectionEmployers.class).getEmployersList();
-    }
-
-    public static List<User> readFileUser() {
-        String json = "";
-        try {
-            json = Files.readString(pathRegisteredUsers);
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return GSON.fromJson(json, CollectionUser.class).getUserList();
-    }
-
-    public static void writeFile(List<User> users) {
-        List<User> existingUsers = readExistingUsers(); // считываем существующих пользователей из файла
-        existingUsers.addAll(users); // добавляем новых пользователей в список
-        String json = GSON.toJson(existingUsers); // сериализуем список в JSON
-        try {
-            Files.write(pathRegisteredUsers, json.getBytes());
+            Files.write(pathEMPLOYERS, json.getBytes());
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
-    private static List<User> readExistingUsers() {
+    private static List<Employer> readExistingUsers() {
         try {
-            String json = new String(Files.readAllBytes(pathRegisteredUsers));
-            Type type = new TypeToken<List<User>>(){}.getType();
+            String json = new String(Files.readAllBytes(pathEMPLOYERS));
+            Type type = new TypeToken<List<Employer>>(){}.getType();
             return GSON.fromJson(json, type);
         } catch (IOException e) {
             return new ArrayList<>(); // если файл не существует, возвращаем пустой список
         }
     }
 
+    public static List<Employer> readFileEmployers() {
+        String json = "";
+        List<Employer> employers = new ArrayList<>();
+        try{
+            Path path = Paths.get("data/employers.json");
+            json = Files.readString(path);
+            employers.addAll(Arrays.asList(GSON.fromJson(json, Employer[].class)));
+        }
+        catch (IOException e){
+            e.printStackTrace();
+        }
+        return employers;
+    }
 }
